diff from latest jason to EB2A